[project]
name = "pzs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "joblib>=1.5.1",
    "jupyter>=1.1.1",
    "nbconvert>=7.16.6",
    "numpy>=2.3.0",
    "optuna>=4.4.0",
    "scikit-learn>=1.7.0",
    "typing>=3.10.0.0",
    "wfdb>=4.3.0",
]
